logs/quantulum.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quantulum'...
Compiling './lib/python3.5/site-packages/quantulum/classifier.py'...
***   File "./lib/python3.5/site-packages/quantulum/classifier.py", line 47
    print '---> Downloading %s (%d of %d)' % \
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quantulum/parser.py'...
***   File "./lib/python3.5/site-packages/quantulum/parser.py", line 124
    value = re.sub(ur'(?<=\d)(%s)10' % r.MULTIPLIERS, 'e', value)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quantulum/regex.py'...
***   File "./lib/python3.5/site-packages/quantulum/regex.py", line 39
    all_numbers = ur'|'.join(ur'\b%s\b' % i for i in numwords.keys() if i)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quantulum/tests.py'...
***   File "./lib/python3.5/site-packages/quantulum/tests.py", line 60
    print COLOR2 % text
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/quantulum-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stemming'...
Compiling './lib/python3.5/site-packages/stemming/porter.py'...
***   File "./lib/python3.5/site-packages/stemming/porter.py", line 176
    print stem("fundamentally")
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stemming-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wikipedia'...
Listing './lib/python3.5/site-packages/wikipedia-1.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
